--- a/index.html
+++ b/index.html
@@ -100,5 +100,14 @@
     </footer>
     <script src="script.js"></script>
     <script src="./animations/script.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LGBBJ7LN6R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LGBBJ7LN6R');
+</script>
 </body>
 </html>
