--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p class="p super ru_elem hidden">👋🏻 Меня зовут Даня. Мне 18 лет, из них <br>последние 1,5 года я посвящаю музыке. 🙎🏻‍♂️</p>
                 <p class="p super eng_elem">👋🏻 My name is Danya. I am 18 years old, of <br>which the last 1.5 years I devote to music. 🙎🏻‍♂️</p>
             </div>
-            <a href="" class="main_btn block_center ru_elem hidden">Узнать больше</a>
+            <a href="#categories" class="main_btn block_center ru_elem hidden">Узнать больше</a>
             <a href="#categories" class="main_btn block_center eng_elem">Learn more</a>
         </section>
         <div class="overflow">
