--- a/nocopyright/index.html
+++ b/nocopyright/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="deskription" content="Бесплатная музыка без авторских прав, аранжировка, сведение">
     <meta name="keywords" content="бесплатная музыка, продюсирование, биты, сведение, аранжировка, no copyright music, lokerp" />
-    <meta name="author" content="Данил Кашин">
+    <meta name="author" content="Даниил Кашин">
     <meta name="theme-color" content="#0e1012">
     <title>Lokerp Music</title>
+    <link rel="icon" href="./images/favicon.ico">
     <link rel="icon" href="../images/icon.png">
     <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="style.css">
