--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="deskription" content="Бесплатная музыка без авторских прав, аранжировка, сведение">
+    <meta name="description" content="Бесплатная музыка без авторских прав, аранжировка, сведение">
     <meta name="keywords" content="бесплатная музыка, продюсирование, биты, сведение, аранжировка, no copyright music, lokerp" />
     <meta name="author" content="Даниил Кашин">
     <meta name="theme-color" content="#0e1012">
