--- a/projects/index.html
+++ b/projects/index.html
@@ -42,7 +42,7 @@
             <h1 class='h1 ru_elem hidden'>Мои проекты</h1>
             <h1 class='h1 eng_elem'>My projects</h1>
             <div class="block_center">
-                <p class="p super ru_elem hidden">🔥 Приложил руку к данным работам:</p>
+                <p class="p super ru_elem hidden">🔥 Приложил руку к этим работам:</p>
                 <p class="p super eng_elem">🔥 Had a hand in it:</p>
             </div>
         </section>
