--- a/services/index.html
+++ b/services/index.html
@@ -50,7 +50,7 @@
         <section class='services_wrapper' data-scroll ="up">
             <div class="service">
                 <div class="service_img_container">
-                    <img src="https://i.pinimg.com/originals/5c/14/b0/5c14b0f9128f3bccd766ddf422d48231.gif" alt="Arrangement / Аранжировка" class="service_img">
+                    <img src="https://s8.gifyu.com/images/SAIT_2.gif" alt="Arrangement / Аранжировка" class="service_img">
                 </div>
                 <h2 class="section_h2 h2 ru_elem hidden">Аранжировка</h2>
                 <p class="section_p p ru_elem hidden">Напишу авторскую аранжировку, исходя из ваших предпочтений, желаний, идей.</p>
