--- a/nocopyright/index.html
+++ b/nocopyright/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Даниил Кашин">
     <meta name="theme-color" content="#0e1012">
     <title>Lokerp Music</title>
-    <link rel="icon" href="./images/favicon.ico">
+    <link rel="icon" href="../images/favicon.ico">
     <link rel="icon" href="../images/icon.png">
     <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="style.css">
