--- a/services/index.html
+++ b/services/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="service">
                 <div class="service_img_container">
-                    <img src="https://imgur.com/DpvVoAM.gif" alt="Mixing / Сведение" class="service_img">
+                    <img src="https://imgur.com/OIEvTx4.gif" alt="Mixing / Сведение" class="service_img">
                 </div>
                 <h2 class="section_h2 h2 ru_elem hidden">Сведение</h2>
                 <p class="section_p p ru_elem hidden">Доработаю, сведу ваш трек по своему личному опыту, вкусу.</p>
