--- a/services/index.html
+++ b/services/index.html
@@ -50,7 +50,10 @@
         <section class='services_wrapper' data-scroll ="up">
             <div class="service">
                 <div class="service_img_container">
-                    <img src="https://i.imgur.com/NZrzNJv.gif" alt="Arrangement / Аранжировка" class="service_img">
+                    <video controls autoplay class='service_img' muted loop>
+                        <source src="https://i.imgur.com/DNxfOkB.mp4">
+                        Arrangement / Аранжировка
+                    </video>
                 </div>
                 <h2 class="section_h2 h2 ru_elem hidden">Аранжировка</h2>
                 <p class="section_p p ru_elem hidden">Напишу авторскую аранжировку, исходя из ваших предпочтений, желаний, идей.</p>
@@ -61,7 +64,10 @@
             </div>
             <div class="service">
                 <div class="service_img_container">
-                    <img src="https://imgur.com/OIEvTx4.gif" alt="Mixing / Сведение" class="service_img">
+                    <video controls autoplay class='service_img' muted loop>
+                        <source src="https://i.imgur.com/DNxfOkB.mp4" type="video/mp4">
+                        Mixing / Сведение
+                    </video>
                 </div>
                 <h2 class="section_h2 h2 ru_elem hidden">Сведение</h2>
                 <p class="section_p p ru_elem hidden">Доработаю, сведу ваш трек по своему личному опыту, вкусу.</p>
