--- a/services/index.html
+++ b/services/index.html
@@ -51,7 +51,7 @@
             <div class="service">
                 <div class="service_img_container">
                     <video controls autoplay class='service_img' muted loop>
-                        <source src="https://i.imgur.com/DNxfOkB.mp4">
+                        <source src="https://i.imgur.com/EhdpqJb.mp4">
                         Arrangement / Аранжировка
                     </video>
                 </div>
